--- a/board/qemu/aarch64-virt/linux.config
+++ b/board/qemu/aarch64-virt/linux.config
@@ -1,76 +1,46 @@
-CONFIG_SYSVIPC=y
-CONFIG_POSIX_MQUEUE=y
-CONFIG_NO_HZ_IDLE=y
-CONFIG_HIGH_RES_TIMERS=y
-CONFIG_TASKSTATS=y
-CONFIG_MEMCG=y
-CONFIG_BLK_CGROUP=y
-CONFIG_CPUSETS=y
-CONFIG_CGROUP_DEVICE=y
-CONFIG_CGROUP_CPUACCT=y
-CONFIG_SCHED_AUTOGROUP=y
-CONFIG_PROFILING=y
-CONFIG_ARCH_VEXPRESS=y
-CONFIG_COMPAT=y
-CONFIG_ACPI=y
-CONFIG_MODULES=y
-CONFIG_MODULE_UNLOAD=y
-CONFIG_BLK_DEV_BSGLIB=y
-CONFIG_BINFMT_MISC=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_NET=y
-CONFIG_PACKET=y
-CONFIG_PACKET_DIAG=y
-CONFIG_UNIX=y
-CONFIG_NET_KEY=y
-CONFIG_INET=y
-CONFIG_IP_MULTICAST=y
-CONFIG_IP_ADVANCED_ROUTER=y
-CONFIG_BRIDGE=m
-CONFIG_NET_SCHED=y
-CONFIG_VSOCKETS=y
-CONFIG_PCI=y
-CONFIG_PCI_HOST_GENERIC=y
-CONFIG_DEVTMPFS=y
-CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_FW_CFG_SYSFS=y
-CONFIG_FW_CFG_SYSFS_CMDLINE=y
-CONFIG_VIRTIO_BLK=y
-CONFIG_BLK_DEV_SD=y
-CONFIG_CHR_DEV_SG=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
-CONFIG_SCSI_SCAN_ASYNC=y
-CONFIG_SCSI_VIRTIO=y
-CONFIG_ATA=y
-CONFIG_NETDEVICES=y
-CONFIG_DUMMY=y
-CONFIG_MACVLAN=y
-CONFIG_VIRTIO_NET=y
-CONFIG_NLMON=y
-CONFIG_INPUT_EVDEV=y
+# Core platform
+CONFIG_ARCH_VIRT=y
+CONFIG_ARM64=y
+
+# Console (QEMU virt uses PL011 UART)
 CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_SERIAL_AMBA_PL011_CONSOLE=y
-CONFIG_VIRTIO_CONSOLE=y
-CONFIG_HW_RANDOM=y
-CONFIG_HW_RANDOM_VIRTIO=y
-CONFIG_TCG_TPM=y
-CONFIG_TCG_TIS=y
+
+# Device filesystem
+CONFIG_DEVTMPFS=y
+CONFIG_DEVTMPFS_MOUNT=y
+
+# Initramfs support
+CONFIG_BLK_DEV_INITRD=y
+CONFIG_INITRAMFS_SOURCE=""
+CONFIG_INITRAMFS_COMPRESSION_LZ4=y
+
+# Compression for kernel image
+CONFIG_KERNEL_LZ4=y
+
+# Essential block device (optional if you want disk rootfs)
+CONFIG_VIRTIO_BLK=y
+CONFIG_VIRTIO_MMIO=y
+
+# Filesystems (only if you want /tmp or ext4 rootfs)
+CONFIG_TMPFS=y
+CONFIG_TMPFS_POSIX_ACL=n
+CONFIG_EXT4_FS=n
+
+# Disable everything else
+CONFIG_NET=n
+CONFIG_MODULES=n
+CONFIG_IPC_NS=n
+CONFIG_SYSVIPC=n
+CONFIG_POSIX_MQUEUE=n
+CONFIG_SOUND=n
+CONFIG_USB=n
+CONFIG_ACPI=n
+CONFIG_PCI=n
 CONFIG_DRM=y
 CONFIG_DRM_VIRTIO_GPU=y
 CONFIG_FB=y
-CONFIG_RTC_CLASS=y
-CONFIG_RTC_DRV_PL031=y
-CONFIG_VIRTIO_PCI=y
-CONFIG_VIRTIO_INPUT=y
-CONFIG_VIRTIO_MMIO=y
-CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES=y
-CONFIG_MAILBOX=y
-CONFIG_PL320_MBOX=y
-CONFIG_ARM_SMMU_V3=y
-CONFIG_EXT4_FS=y
-CONFIG_FUSE_FS=y
-CONFIG_VIRTIO_FS=y
-CONFIG_OVERLAY_FS=y
-CONFIG_TMPFS=y
-CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_FB_SIMPLE=y
+CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_DRM_KMS_HELPER=y
+CONFIG_DRM_TTM=y
