--- a/configs/my_defconfig
+++ b/configs/my_defconfig
@@ -1,15 +1,20 @@
 # Base system
 BR2_aarch64=y
-BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+BR2_TOOLCHAIN_BUILDROOT_MUSL=y
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_GETTY_PORT="ttyAMA0"
 
 # Graphics stack
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
+BR2_PACKAGE_XSERVER_XORG_SERVER_MODULAR=y
+# BR2_PACKAGE_XSERVER_XORG_SERVER_KDRIVE is not set
+BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
+BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
 BR2_PACKAGE_XAPP_XINIT=y
-BR2_PACKAGE_MESA3D=y
-BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VIRGL=y
-BR2_PACKAGE_DEJAVU=y
+BR2_PACKAGE_TTF_BITSTREAM_VERA=y
+BR2_PACKAGE_EUDEV=y
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 
 # Python3
 BR2_PACKAGE_PYTHON3=y
@@ -23,6 +28,7 @@ BR2_PACKAGE_TK=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
 BR2_LINUX_KERNEL_IMAGE=y
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="board/myfastboot/linux-xorg.fragment"
 
 # Root filesystem
 BR2_TARGET_ROOTFS_CPIO=y
