Dropped entire x11/tk stack and switched to framebuffer GUI

--- a/configs/my_defconfig
+++ b/configs/my_defconfig
@@ -1,34 +1,19 @@
 # Base system
 BR2_aarch64=y
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
-BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_TARGET_GENERIC_GETTY_PORT="ttyAMA0"
 
-# Graphics stack
-BR2_PACKAGE_XORG7=y
-BR2_PACKAGE_XSERVER_XORG_SERVER=y
-BR2_PACKAGE_XSERVER_XORG_SERVER_MODULAR=y
-# BR2_PACKAGE_XSERVER_XORG_SERVER_KDRIVE is not set
-BR2_PACKAGE_XDRIVER_XF86_VIDEO_FBDEV=y
-BR2_PACKAGE_XDRIVER_XF86_INPUT_EVDEV=y
-BR2_PACKAGE_XAPP_XINIT=y
-BR2_PACKAGE_TTF_BITSTREAM_VERA=y
-BR2_PACKAGE_EUDEV=y
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
-
-# Python3
+# Python runtime
 BR2_PACKAGE_PYTHON3=y
-BR2_PACKAGE_PYTHON3_TKINTER=y
 
-# Tcl/Tk (needed for _tkinter)
-BR2_PACKAGE_TCL=y
-BR2_PACKAGE_TK=y
+# Device management via devtmpfs
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 
 # Linux kernel
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
 BR2_LINUX_KERNEL_IMAGE=y
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="board/myfastboot/linux-xorg.fragment"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="board/myfastboot/linux-fb.fragment"
 
 # Root filesystem
 BR2_TARGET_ROOTFS_CPIO=y
