some trimming of unwanted modules

--- a/configs/my_defconfig
+++ b/configs/my_defconfig
@@ -3,8 +3,8 @@ BR2_aarch64=y
 BR2_TOOLCHAIN_BUILDROOT_MUSL=y
 BR2_TARGET_GENERIC_GETTY_PORT="ttyAMA0"
 
-# Python runtime
-BR2_PACKAGE_PYTHON3=y
+# Userland
+BR2_PACKAGE_FASTFB=y
 
 # Device management via devtmpfs
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
@@ -13,7 +13,7 @@ BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
 BR2_LINUX_KERNEL_IMAGE=y
-BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="board/myfastboot/linux-fb.fragment"
+BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="board/myfastboot/linux-fb.fragment board/myfastboot/linux-minimal.fragment"
 
 # Root filesystem
 BR2_TARGET_ROOTFS_CPIO=y
