--- a/package/Config.in
+++ b/package/Config.in
@@ -1711,6 +1711,7 @@ menu "Graphics"
 	source "package/cutekeyboard/Config.in"
 	source "package/exempi/Config.in"
 	source "package/exiv2/Config.in"
+	source "package/fastfb/Config.in"
 	source "package/fltk/Config.in"
 	source "package/flutter-engine/Config.in"
 	source "package/fontconfig/Config.in"
